# gen-gmsk

./: README.md  common_id.go  config.yml  deprecated.yml  enum.go  enums.tmpl  from-rust.go  func-header.tmpl  func.go  func.tmpl  func_name.go  func_vars.go  functype_string.go  generate.go  go.mod  go.sum  main.go  msk_header.go  name_mapping.json  output_config.go  urls.yml
from-rust/: Cargo.toml  README.md  enums.yml  funcs.yml
from-rust/data/: mosek-lib.rs
from-rust/src/: main.rs
get-doc/: main.go
