[package]
name = "from-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.14", features = ["parsing", "full", "extra-traits"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
